postcss/testData/inspections/customSelectors/emptyCustomSelector.pcss
@custom-selector <error descr="':' expected"><error descr="an identifier expected"><error descr="valid token expected">@</error></error></error>:--button h1;